# DCMotor-Control-three-loop

./: .gitignore  .mxproject  AGENTS.md  CMakeLists.txt  README.md  STM32G030XX_FLASH.ld  Triple-CascadeControlDCMotor.ioc
Core/Inc/: stm32g0xx_it.h
Core/Src/: adc.c  dma.c  i2c.c  main.c  stm32g0xx_it.c  tim.c  usart.c
Libraries/: TypeDefine.h
Libraries/AD116/: AD116.c  AD116.h
Libraries/Filter/: Filter.c  Filter.h
Libraries/MT6701/: MT6701.c  MT6701.h
Libraries/NvmParam/: NvmParam.c  NvmParam.h
Libraries/PID/: PID.c  PID.h
Libraries/PWMCapture/: PWMCapture.c  PWMCapture.h
Libraries/ServoControl/: ServoControl.c  ServoControl.h
Libraries/Tsbp/: Tsbp.c  Tsbp.h
Libraries/UartProto/: UartProto.c  UartProto.h
Libraries/VoltageStatus/: VoltageStatus.c  VoltageStatus.h
Sim/: CMakeLists.txt  servo_sim.c  servo_tests.c  tsbp_bus_sim.c  tsbp_protocol_tests.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/tsbp/: README.md
docs/tsbp/en/: 01-overview-physical.md  02-data-link-frame.md  03-state-topology.md  04-pdo-sdo-object-dictionary.md  05-master-fault-clock.md  README.md  TKServoSlave.en.tks.xml
docs/tsbp/zh-cn/: 01-overview-physical.md  02-data-link-frame.md  03-state-topology.md  04-pdo-sdo-object-dictionary.md  05-master-fault-clock.md  README.md  TKServoSlave.zh-cn.tks.xml
